--- a/web-client/package.json
+++ b/web-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-client",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mapbox/polyline": "^1.2.1",
     "leaflet": "^1.9.4",
     "next": "15.3.2",
     "react": "^19.0.0",
@@ -19,8 +18,6 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/leaflet": "^1.9.17",
-    "@types/mapbox__polyline": "^1.0.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
