--- a/web-client/package.json
+++ b/web-client/package.json
@@ -12,7 +12,6 @@
     "@tailwindcss/postcss": "^4.1.7",
     "leaflet": "^1.9.4",
     "next": "15.3.2",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
@@ -23,6 +22,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "tailwindcss": "^4.1.7",
     "typescript": "^5"
   }
